# discord-ambient-sonifier

./: .gitignore  CMakeLists.txt  README.md
src/: AmbientPadSynth.cpp  AmbientPadSynth.h  main.cpp
